--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +32,11 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+.header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -86,23 +86,23 @@ p {
     background-color: #2589bd;
 }
 
-.benefits-lbc { 
+.benefit { 
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefits-lbc h3 {
+.benefit h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefits-lbc img {
+.benefit img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.key-points {
+.services {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -111,10 +111,10 @@ p {
     color: #ffffff;
 }
 
-.key-points img {
+.services img {
     max-height: 200px;
 }
-.key-points h2 {
+.services h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
